# DeepMind-Shark

./: README.md
af-delivery-data-platform/: .gitignore  README.md
af-delivery-data-platform/af-kb-chatbot-kb/: .gitignore  README.md  databricks.yml  pyproject.toml
af-delivery-data-platform/af-kb-chatbot-kb/doc/: INVESTIGATION_NOTES.md
af-delivery-data-platform/af-kb-chatbot-kb/resources/: gold.pipeline.yml  ingestion.job.yml  labeling_landing.pipeline.yml  overview.dashboard.yml  serving.job.yml  transformation.job.yml
af-delivery-data-platform/af-kb-chatbot-kb/src/: README.md
af-delivery-data-platform/af-kb-chatbot-kb/src/dashboards/: kb_unstructured.lvdash.json
af-delivery-data-platform/af-kb-chatbot-kb/src/data_ingestion/: constants.py  export_dlq_to_sheet.py  finalized_documents_discovery.py  helpers.py  monday2s3_utils.py  monday_gdrive_download.py  update_monday_error.py
af-delivery-data-platform/af-kb-chatbot-kb/src/data_serving/: constants.py  serving.py  update_monday_ignored.py  update_monday_status.py
af-delivery-data-platform/af-kb-chatbot-kb/src/data_transformation/: constants.py  gold.py  landing.py  silver_parse_chunk.py  silver_vectorize.py
af-delivery-data-platform/dab-template/: databricks_template_schema.json
af-delivery-data-platform/deepmind-labeling/: .gitignore  README.md  databricks.yml  pyproject.toml
af-delivery-data-platform/deepmind-labeling/fixtures/: profile_mvp.json  text_translation.json  video_description_tag.json
af-delivery-data-platform/deepmind-labeling/fixtures/prompt_template/: adversary_level.md  image_description.md  is_abuse_category.md  non_adversarial_content_description.md  sexual_explicit.md  suicide_and_self_harm.md  video_tags_summary.md  violence_or_gore.md
af-delivery-data-platform/deepmind-labeling/resources/: ggdrive_ingestion.job.yml  labeling_gold_image.pipeline.yml  labeling_gold_video.pipeline.yml  labeling_landing.pipeline.yml  labeling_silver_image.job.yml  labeling_silver_video.job.yml  overview.dashboard.yml
af-delivery-data-platform/deepmind-labeling/src/dashboards/: labeling.lvdash.json
af-delivery-data-platform/deepmind-labeling/src/data_ingestion/: constants.py  gdrive_download.py  gdrive_download_task.py  gsheet2s3.py
af-delivery-data-platform/deepmind-labeling/src/data_transformation/: README.md  constants.py  gold_aggregation.py  gold_video_aggregation.py  house_keeping.py  landing.py  prompt_profiles_config.py  set_mlflow.py  silver_runner.py  task_framework.py
af-delivery-data-platform/deepmind-labeling/src/data_transformation/llm_orchestrator/: audio_translate.py  image_abuse_profiler.py  image_des_tag.py  image_embedding.py  llm_helpers.py  video_abuse_profiler.py  video_des.py  video_des_tag.py  video_helpers.py
af-delivery-data-platform/deepmind-labeling/src/data_transformation/tasks/: image_abuse_profiling_task.py  video_audio_transcribe_task.py  video_audio_translate_task.py  video_des_tag_task.py  video_embedding_task.py  video_extract_audio_task.py  video_extract_frames_task.py  video_frame_abuse_consolidate_task.py  video_frame_abuse_task.py
af-delivery-data-platform/deepmind-labeling/src/data_transformation/v0.2.0/: index_image.py  index_video.py
af-delivery-data-platform/dismis_trends/: .gitignore  README.md  databricks.yml
af-delivery-data-platform/genai/: .gitignore  README.md  databricks.yml
af-delivery-data-platform/labeling/: .gitignore  README.md  databricks.yml  pyproject.toml
af-delivery-data-platform/sample_project/: README.md  databricks.yml  pyproject.toml
(+164 files in other folders)
